--- a/submission/primiero.bib
+++ b/submission/primiero.bib
@@ -17,6 +17,16 @@
   crossref = {J:iis}
 }
 
+
+@book{Troelstra:2000:BPT:351148,
+ author = {Troelstra, A. S. and Schwichtenberg, H.},
+ title = {Basic Proof Theory (2Nd Ed.)},
+ year = {2000},
+ isbn = {0-521-77911-1},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
+
 @article{Allo:Theoria:2015,
   author = {Allo, Patrick},
   title = {Logic, Reasoning and Revision},
@@ -277,6 +287,15 @@
   bibfiles = {dirk},
   crossref = {D:tfg}
 }
+
+@techreport{pfenning,
+  author = {Frank Pfenning},
+  title = {Handout on Automated Theorem Proving},
+  pages = {},
+  annote = {2004},
+	school = {School of Computer Science, Carnegie Mellon University}
+}
+
 
 @INCOLLECTION{D:kloof,
   author = {Diderik Batens},
@@ -17827,4 +17846,3 @@
   bibfiles = {dirk,c+ross},
   booktitle = {\bf AAN TE VULLEN}
 }
-
